# HtyMemoryHub

./: .gitignore  README.md  pyproject.toml  start-memoryhub.bat
docs/: 2026-07-17-memoryhub-embed-key-setup.md
docs/plans/: 2026-07-17-arch-knowledge-graph.md  2026-07-17-memory-vector-db-service.md  2026-07-17-memory-write-lifecycle.md  2026-07-17-web-dashboard.md  global-plan-manager.md
src/memoryhub/: __init__.py  arch.py  cli.py  config.py  embedder.py  indexer.py  lint.py  scanner.py  search.py  server.py  store.py  writer.py
webui/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webui/src/: App.tsx  api.ts  index.css
webui/src/components/: Feedback.tsx  ForceGraph.tsx  SwimlaneGraph.tsx  archShared.ts
webui/src/views/: HealthView.tsx  ImpactView.tsx  ModuleView.tsx  OverviewView.tsx  SearchView.tsx
